myCompilerParser.java
// $ANTLR 3.5.2 myCompiler.g 2019-06-21 02:48:56

	import java.util.Scanner;
	import java.util.HashMap;
	import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class myCompilerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT1", "COMMENT2", "DEC_NUM", 
		"DIGIT", "FLOAT_NUM", "FLOAT_NUM1", "FLOAT_NUM2", "FLOAT_NUM3", "ID", 
		"LETTER", "STRING", "WS", "'!='", "'('", "')'", "'*'", "'+'", "','", "'-'", 
		"'/'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'else'", "'float'", 
		"'for'", "'if'", "'int'", "'printf'", "'while'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int COMMENT1=4;
	public static final int COMMENT2=5;
	public static final int DEC_NUM=6;
	public static final int DIGIT=7;
	public static final int FLOAT_NUM=8;
	public static final int FLOAT_NUM1=9;
	public static final int FLOAT_NUM2=10;
	public static final int FLOAT_NUM3=11;
	public static final int ID=12;
	public static final int LETTER=13;
	public static final int STRING=14;
	public static final int WS=15;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myCompilerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myCompilerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myCompilerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myCompiler.g"; }


		HashMap memory = new HashMap();
		HashMap memoryF = new HashMap();
	/** Map variable name to Integer object holding value */
		HashMap<String,ArrayList> symtab = new HashMap<String,ArrayList>();
		int labelCount=0;
		int memIndex=0;
		
		List<String> code=new ArrayList<String>();
		List<String> label=new ArrayList<String>();	
		
		    void prologue()
	    {
	       code.add(".source in.j");
	       code.add(".class public static myResult");
	       code.add(".super java/lang/Object");
	       code.add(".method public static main([Ljava/lang/String;)V");

	       /* The size of stack and locals should be properly set. */
	       code.add(".limit stack 100");
	       code.add(".limit locals 100");
	    }
	    void epilogue()
	    {
	       /* handle epilogue */
	       code.add("return");
	       code.add(".end method");
	    }
	    String newLabel()
	    {
	       labelCount ++;
	       return (new String("L")) + Integer.toString(labelCount);
	    }
		void labelInit(){
			label.add("goto END");
		}
		String newReLabel(){
			return (new String("RE")) + Integer.toString(labelCount);
		}
	    public List<String> getTextCode()
	    {
	       return code;
	    }
	    public List<String> getTextLabel()
	    {
	       return label;
	    }



	// $ANTLR start "program"
	// myCompiler.g:60:1: program : ( declaration )+ ;
	public final void program() throws RecognitionException {
		try {
			// myCompiler.g:62:3: ( ( declaration )+ )
			// myCompiler.g:62:3: ( declaration )+
			{
			// myCompiler.g:62:3: ( declaration )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==32||LA1_0==35) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// myCompiler.g:62:3: declaration
					{
					pushFollow(FOLLOW_declaration_in_program34);
					declaration();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "declaration"
	// myCompiler.g:66:1: declaration : ( variable | function | functionDef );
	public final void declaration() throws RecognitionException {
		try {
			// myCompiler.g:68:3: ( variable | function | functionDef )
			int alt2=3;
			alt2 = dfa2.predict(input);
			switch (alt2) {
				case 1 :
					// myCompiler.g:68:3: variable
					{
					pushFollow(FOLLOW_variable_in_declaration47);
					variable();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:68:14: function
					{
					pushFollow(FOLLOW_function_in_declaration51);
					function();
					state._fsp--;

					}
					break;
				case 3 :
					// myCompiler.g:68:25: functionDef
					{
					pushFollow(FOLLOW_functionDef_in_declaration55);
					functionDef();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declaration"



	// $ANTLR start "variable"
	// myCompiler.g:72:1: variable : type ID '=' expr ';' ;
	public final void variable() throws RecognitionException {
		Token ID1=null;
		int type2 =0;

		try {
			// myCompiler.g:74:3: ( type ID '=' expr ';' )
			// myCompiler.g:74:3: type ID '=' expr ';'
			{
			pushFollow(FOLLOW_type_in_variable67);
			type2=type();
			state._fsp--;

			ID1=(Token)match(input,ID,FOLLOW_ID_in_variable69); 
			match(input,27,FOLLOW_27_in_variable71); 
			pushFollow(FOLLOW_expr_in_variable73);
			expr();
			state._fsp--;

			match(input,24,FOLLOW_24_in_variable75); 

				int t;
				if (symtab.containsKey((ID1!=null?ID1.getText():null))) {
			                                    // variable re-declared.
				System.out.println("Type Error: " + ID1.getLine() +": Redeclared identifier.");
			                    System.exit(0);
			 	}
				if(type2==0)
					t=0;
				else
					t=1;
			    /* Add ID and its attr_type into the symbol table. */
			    	ArrayList<Integer> the_list = new ArrayList<Integer>();
			      	the_list.add(t);
			      	the_list.add(memIndex); 
				if(t==0){
					code.add("istore "+Integer.toString(memIndex));
				}
				else{
					code.add("fstore "+Integer.toString(memIndex));
				}
			      	memIndex = memIndex + 1;
			  	symtab.put((ID1!=null?ID1.getText():null), the_list);

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "variable"



	// $ANTLR start "type"
	// myCompiler.g:101:1: type returns [int t] : ( 'int' | 'float' );
	public final int type() throws RecognitionException {
		int t = 0;


		try {
			// myCompiler.g:103:3: ( 'int' | 'float' )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==35) ) {
				alt3=1;
			}
			else if ( (LA3_0==32) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// myCompiler.g:103:3: 'int'
					{
					match(input,35,FOLLOW_35_in_type91); 
					t =0;
					}
					break;
				case 2 :
					// myCompiler.g:104:3: 'float'
					{
					match(input,32,FOLLOW_32_in_type97); 
					t =1;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return t;
	}
	// $ANTLR end "type"



	// $ANTLR start "function"
	// myCompiler.g:108:1: function : type ID '(' ( formalParameter ( ',' formalParameter )* )? ')' block ;
	public final void function() throws RecognitionException {
		try {
			// myCompiler.g:110:3: ( type ID '(' ( formalParameter ( ',' formalParameter )* )? ')' block )
			// myCompiler.g:110:3: type ID '(' ( formalParameter ( ',' formalParameter )* )? ')' block
			{
			pushFollow(FOLLOW_type_in_function110);
			type();
			state._fsp--;

			match(input,ID,FOLLOW_ID_in_function112); 
			match(input,17,FOLLOW_17_in_function115); 
			// myCompiler.g:112:5: ( formalParameter ( ',' formalParameter )* )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==32||LA5_0==35) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// myCompiler.g:112:7: formalParameter ( ',' formalParameter )*
					{
					pushFollow(FOLLOW_formalParameter_in_function119);
					formalParameter();
					state._fsp--;

					// myCompiler.g:112:23: ( ',' formalParameter )*
					loop4:
					while (true) {
						int alt4=2;
						int LA4_0 = input.LA(1);
						if ( (LA4_0==21) ) {
							alt4=1;
						}

						switch (alt4) {
						case 1 :
							// myCompiler.g:112:24: ',' formalParameter
							{
							match(input,21,FOLLOW_21_in_function122); 
							pushFollow(FOLLOW_formalParameter_in_function124);
							formalParameter();
							state._fsp--;

							}
							break;

						default :
							break loop4;
						}
					}

					}
					break;

			}

			match(input,18,FOLLOW_18_in_function131); 

				prologue();

			pushFollow(FOLLOW_block_in_function135);
			block();
			state._fsp--;


				List<String> a;
				code.add("goto END");
				//labelInit();
				a=getTextLabel();
				for(String s:a){
					code.add(s);
				}
				code.add("END:");
				epilogue();

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "function"



	// $ANTLR start "functionDef"
	// myCompiler.g:129:1: functionDef : type ID '(' ( type ( ID )? ( ',' type ( ID )? )* )? ')' ';' ;
	public final void functionDef() throws RecognitionException {
		try {
			// myCompiler.g:131:2: ( type ID '(' ( type ( ID )? ( ',' type ( ID )? )* )? ')' ';' )
			// myCompiler.g:131:2: type ID '(' ( type ( ID )? ( ',' type ( ID )? )* )? ')' ';'
			{
			pushFollow(FOLLOW_type_in_functionDef145);
			type();
			state._fsp--;

			match(input,ID,FOLLOW_ID_in_functionDef147); 
			match(input,17,FOLLOW_17_in_functionDef148); 
			// myCompiler.g:131:13: ( type ( ID )? ( ',' type ( ID )? )* )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==32||LA9_0==35) ) {
				alt9=1;
			}
			switch (alt9) {
				case 1 :
					// myCompiler.g:131:15: type ( ID )? ( ',' type ( ID )? )*
					{
					pushFollow(FOLLOW_type_in_functionDef152);
					type();
					state._fsp--;

					// myCompiler.g:131:20: ( ID )?
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==ID) ) {
						alt6=1;
					}
					switch (alt6) {
						case 1 :
							// myCompiler.g:131:20: ID
							{
							match(input,ID,FOLLOW_ID_in_functionDef154); 
							}
							break;

					}

					// myCompiler.g:131:24: ( ',' type ( ID )? )*
					loop8:
					while (true) {
						int alt8=2;
						int LA8_0 = input.LA(1);
						if ( (LA8_0==21) ) {
							alt8=1;
						}

						switch (alt8) {
						case 1 :
							// myCompiler.g:131:25: ',' type ( ID )?
							{
							match(input,21,FOLLOW_21_in_functionDef158); 
							pushFollow(FOLLOW_type_in_functionDef160);
							type();
							state._fsp--;

							// myCompiler.g:131:34: ( ID )?
							int alt7=2;
							int LA7_0 = input.LA(1);
							if ( (LA7_0==ID) ) {
								alt7=1;
							}
							switch (alt7) {
								case 1 :
									// myCompiler.g:131:34: ID
									{
									match(input,ID,FOLLOW_ID_in_functionDef162); 
									}
									break;

							}

							}
							break;

						default :
							break loop8;
						}
					}

					}
					break;

			}

			match(input,18,FOLLOW_18_in_functionDef170); 
			match(input,24,FOLLOW_24_in_functionDef172); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "functionDef"



	// $ANTLR start "formalParameter"
	// myCompiler.g:134:1: formalParameter : type ID ;
	public final void formalParameter() throws RecognitionException {
		try {
			// myCompiler.g:136:3: ( type ID )
			// myCompiler.g:136:3: type ID
			{
			pushFollow(FOLLOW_type_in_formalParameter183);
			type();
			state._fsp--;

			match(input,ID,FOLLOW_ID_in_formalParameter185); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "formalParameter"



	// $ANTLR start "block"
	// myCompiler.g:140:1: block : '{' ( variable )* ( stat )* '}' ;
	public final void block() throws RecognitionException {
		try {
			// myCompiler.g:141:3: ( '{' ( variable )* ( stat )* '}' )
			// myCompiler.g:141:3: '{' ( variable )* ( stat )* '}'
			{
			match(input,38,FOLLOW_38_in_block196); 
			// myCompiler.g:142:1: ( variable )*
			loop10:
			while (true) {
				int alt10=2;
				int LA10_0 = input.LA(1);
				if ( (LA10_0==32||LA10_0==35) ) {
					alt10=1;
				}

				switch (alt10) {
				case 1 :
					// myCompiler.g:142:1: variable
					{
					pushFollow(FOLLOW_variable_in_block198);
					variable();
					state._fsp--;

					}
					break;

				default :
					break loop10;
				}
			}

			// myCompiler.g:142:11: ( stat )*
			loop11:
			while (true) {
				int alt11=2;
				int LA11_0 = input.LA(1);
				if ( (LA11_0==DEC_NUM||LA11_0==FLOAT_NUM||LA11_0==ID||LA11_0==17||LA11_0==24||(LA11_0 >= 33 && LA11_0 <= 34)||(LA11_0 >= 36 && LA11_0 <= 37)) ) {
					alt11=1;
				}

				switch (alt11) {
				case 1 :
					// myCompiler.g:142:11: stat
					{
					pushFollow(FOLLOW_stat_in_block201);
					stat();
					state._fsp--;

					}
					break;

				default :
					break loop11;
				}
			}

			match(input,39,FOLLOW_39_in_block204); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "block"



	// $ANTLR start "stat"
	// myCompiler.g:146:1: stat : ( ifStat | expr ';' | whileStat | forStat | ';' | functionCall ';' | assign ';' );
	public final void stat() throws RecognitionException {
		try {
			// myCompiler.g:147:3: ( ifStat | expr ';' | whileStat | forStat | ';' | functionCall ';' | assign ';' )
			int alt12=7;
			switch ( input.LA(1) ) {
			case 34:
				{
				alt12=1;
				}
				break;
			case ID:
				{
				int LA12_2 = input.LA(2);
				if ( (LA12_2==27) ) {
					alt12=7;
				}
				else if ( (LA12_2==16||(LA12_2 >= 19 && LA12_2 <= 20)||(LA12_2 >= 22 && LA12_2 <= 26)||(LA12_2 >= 28 && LA12_2 <= 30)) ) {
					alt12=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 12, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case DEC_NUM:
			case FLOAT_NUM:
			case 17:
				{
				alt12=2;
				}
				break;
			case 37:
				{
				alt12=3;
				}
				break;
			case 33:
				{
				alt12=4;
				}
				break;
			case 24:
				{
				alt12=5;
				}
				break;
			case 36:
				{
				alt12=6;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 12, 0, input);
				throw nvae;
			}
			switch (alt12) {
				case 1 :
					// myCompiler.g:147:3: ifStat
					{
					pushFollow(FOLLOW_ifStat_in_stat215);
					ifStat();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:147:12: expr ';'
					{
					pushFollow(FOLLOW_expr_in_stat219);
					expr();
					state._fsp--;

					match(input,24,FOLLOW_24_in_stat221); 
					}
					break;
				case 3 :
					// myCompiler.g:147:22: whileStat
					{
					pushFollow(FOLLOW_whileStat_in_stat224);
					whileStat();
					state._fsp--;

					}
					break;
				case 4 :
					// myCompiler.g:147:34: forStat
					{
					pushFollow(FOLLOW_forStat_in_stat228);
					forStat();
					state._fsp--;

					}
					break;
				case 5 :
					// myCompiler.g:148:3: ';'
					{
					match(input,24,FOLLOW_24_in_stat232); 
					}
					break;
				case 6 :
					// myCompiler.g:149:1: functionCall ';'
					{
					pushFollow(FOLLOW_functionCall_in_stat237);
					functionCall();
					state._fsp--;

					match(input,24,FOLLOW_24_in_stat239); 
					}
					break;
				case 7 :
					// myCompiler.g:149:19: assign ';'
					{
					pushFollow(FOLLOW_assign_in_stat242);
					assign();
					state._fsp--;

					match(input,24,FOLLOW_24_in_stat244); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "stat"



	// $ANTLR start "ifStat"
	// myCompiler.g:153:1: ifStat : 'if' '(' expr ')' block ( 'else' block )? ;
	public final void ifStat() throws RecognitionException {

			int labelNow=0,hasElse=0;
		 	String l,r,l1,r1;
			l=r=l1=r1=null;
